# LapisGis

./: .gitmodules  CMakeLists.txt  LICENSE.txt  LapisGis.cmake  LapisGisTargets.cmake  LapisGisTest.cmake
src/: Alignment.cpp  Alignment.hpp  CoordRef.cpp  CoordRef.hpp  CoordTransform.cpp  CoordTransform.hpp  CoordVector.hpp  Coordinate.hpp  CurrentLasPoint.cpp  CurrentLasPoint.hpp  Extent.cpp  Extent.hpp  GDALWrappers.cpp  GDALWrappers.hpp  Geometry.cpp  Geometry.hpp  GisExceptions.hpp  LapisGis.cpp  LapisGis.hpp  LapisGisTypeDefs.hpp  LasFilter.hpp  LasIO.cpp  LasIO.hpp  LasReader.cpp  LasReader.hpp  MultiBandRaster.cpp  MultiBandRaster.hpp  ProjWrappers.cpp  QuadExtent.cpp  QuadExtent.hpp  Raster.hpp  RasterAlgos.hpp  Unit.cpp  Unit.hpp  Vector.cpp  Vector.hpp  gis_pch.hpp  projwrappers.hpp
src/test/: alignmenttest.cpp  coordreftest.cpp  coordtransformtest.cpp  coordvectortest.cpp  cropviewtest.cpp  extenttest.cpp  lasiotest.cpp  lasreadertest.cpp  quadextenttest.cpp  rasteralgostest.cpp  rastertest.cpp  unitstest.cpp  vectortest.cpp
src/test/testfiles/: testpoints.dbf
